added em-templates 1/2/3

--- a/pages/question1.html
+++ b/pages/question1.html
@@ -26,35 +26,64 @@
         <main>
 
             <div class="em-template">
-                <div class="em-nav">
-                    <ul>
-                        <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
-                        <li><a href="/replyall">Reply All</a></li>
-                        <li><a href="/forward">Forward</a></li>
-                        <li><a href="/delete">Delete</a></li>
-                        <!-- <li><a href="/setflag">Set Flag</a></li> -->
-                    </ul>
-                </div>
 
-                <h4>Re: Is this phishing?</h4>
+                <h2 style="padding: 2em 0 0;">Hi Julie Mooley, Big Offer! Turn Your Ideas In to A Book. Easy &
+                    Affordable</h2>
 
                 <div class="em-from-div">
                     <span class="em-dot">
-                        <p>JS</p>
+                        <p>BS</p>
                     </span>
-                    <h5>
-                        <strong>Joe Schmoe &lt;joe.schmoe@email.com&gt;</strong><br>
-                        1/12/22 10:10am
-                    </h5>
+                    <h4>
+                        <strong>Book Writing Service &lt;sales@thewritingcrib.com&gt;</strong><br>
+                        2/14/2022 12:06 PM
+                    </h4>
                 </div>
 
-                <h5><br>To: Julie Mooly Cc: Francis Lantis</h5>
-                <p><br>hello,</p>
-                <p><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, iure. Autem nam accusamus
-                    mollitia nobis, ullam minus ex corrupti maxime odio veniam delectus unde recusandae, minima labore
-                    nulla sequi iste libero fugit voluptates, assumenda impedit quae eligendi animi sint? Delectus
-                    tempora cum, consequatur reprehenderit velit non aut veritatis temporibus natus?</p>
+                <h4><br>To: Julie Mooley</h4><br>
+                <div class="body">
+                    <h1>
+                        Turn your ideas into a bestselling book with our Professional <br>
+                        <span style="color: teal;">Ghostwriting Services</span>
+                    </h1>
+                    <p><br>Do you want to publish a book under your name but struggle to pen down your idea? Fulfill
+                        your dream of
+                        becoming a renowned author with our reliable and affordable ghostwriting solutions. Hire an
+                        experienced
+                        ghostwriter to make it to the best-seller's vault. Turn your rough draft into a compelling story
+                        today.</p>
+                    <br>
 
+                    <p class="tooltip" style="color: teal; font-size: large;"><strong>Chat with Us Now</strong>
+                        <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z4/ Click or tap to
+                            follow link</span>
+                    </p><br>
+
+                    <p style="color: teal; text-decoration: underline; font-size: large"><strong>Call Now (855)
+                            205-1739</strong>
+                    </p><br>
+
+                    <div class="tooltip tooltip-button">View Package Price
+                        <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z5/ <br>Click or
+                            tap to follow link</span>
+                    </div><br>
+
+                    <p style="text-align: center; font-size: smaller">You are subscribed to this email as <span
+                            style="border-bottom: 2px dotted;">juliemooley@mooleycorp.com</span><br>
+                        Click here to modify your
+                        <span class="tooltip" style="color: blue; text-decoration: underline;">preferences
+                            <span class="tooltiptext">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/
+                                <br>Click or tap to follow link
+                            </span>
+                        </span>
+                        or
+                        <span class="tooltip" style="color: blue; text-decoration: underline;">unsubscribe
+                            <span class="tooltiptext">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/
+                                <br> Click or tap to follow link
+                            </span>
+                        </span>.
+                    </p><br>
+                </div>
             </div>
 
             <nav data-role="navbar">
@@ -66,11 +95,11 @@
                     <label for="02">Valid Email</label><br>
                     <!-- <input type="submit" value="submit"> -->
                 </form>
-                
+
                 <!-- <button id="0" class="answer-btn"><a href="question2.html" data-icon="bars"
                         class="ui-btn-icon-bottom navView" data-transition="fade">Next</a> </button> -->
-            
-                        <button id="0" class="answer-btn">Next Question </button>
+
+                <button id="0" class="answer-btn">Next Question </button>
             </nav>
 
         </main>
