--- a/pages/question2.html
+++ b/pages/question2.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email1.css">
+    <link rel="stylesheet" href="../css/email2.css">
 
     <title>Phishing Quiz</title>
 </head>
@@ -26,37 +26,60 @@
         <main>
 
             <div class="em-template">
-                <div class="em-nav">
-                    <ul>
-                        <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
-                        <li><a href="/replyall">Reply All</a></li>
-                        <li><a href="/forward">Forward</a></li>
-                        <li><a href="/delete">Delete</a></li>
-                        <!-- <li><a href="/setflag">Set Flag</a></li> -->
-                    </ul>
+
+                <h4 style="padding: 2em 0 0;">
+                    From: <span class="tooltip" style="color: blue; text-decoration: underline;">PayPal
+                        <span class="tooltiptext">mailto:itechsoftbd@gmail.com <br>Ctrl + Click to follow link
+                        </span>
+                    </span> <br>
+                    Sent: Monday, July 5, 2021 12:35 PM<br>
+                    To: jschmoe@yahoo.com
+                    Subject: [Limited Account] misinformation on the account, 7/5/2021 7:34:57 PM #198-777-84011<br>
+                    Importance: High
+                </h4><br>
+                <div class="body">
+                    <div class="paypal">
+                        <img src="images/paypal logo.png" alt="paypal logo">
+                    </div>
+                    <h3>
+                        Hello,
+                        <span style="color: rgb(61, 112, 232); font-weight: bold;">jschmoe@yahoo.com</span>
+                    </h3>
+                    <h3>Your PayPal has been Limited!!</h3>
+                    <br>
+
+                    <p style="font-family:'Times New Roman', Times, serif;">
+                        an error was detected in your account information<br><br>
+                        We need to confirm the data matches your account to avoid misuse and restore all rights that
+                        have
+                        been<br><br>
+                        limited to the account<br><br>
+                        if there is no confirmation from the account owner for 24 hours, the account will be<br><br>
+                        locked
+                        permanently.<br><br>
+                        What do you need to do?<br><br>
+                        Correct your account information now and follow the steps we provide
+                    </p><br><br>
+
+                    <div class="tooltip tooltip-button">Confirm My Account
+                        <span class="tooltiptext">https://www.reemind.duckdns.org/admin/information/<br> Ctrl + Click to
+                            follow
+                            link</span>
+                    </div><br><br>
+
+                    <p>Thank you for using PayPal</p><br>
+                    <p style="font-size: smaller">PayPal Service<br><br>If you not signed in to PayPal recently and be
+                        receieve
+                        someone may have accessed your account,go to PayPal (<span class="tooltip"
+                            style="color: blue; text-decoration: underline;">https://paypal.com)
+                            <span class="tooltiptext">https://www.paypal.com/<br> Ctrl + Click to follow link
+                            </span>
+
+                        </span> and <br><br>change your password as soon as possible</p>
+                    </span><br><br>
                 </div>
-
-                <h4>Re: Is this phishing?</h4>
-
-                <div class="em-from-div">
-                    <span class="em-dot">
-                        <p>JS</p>
-                    </span>
-                    <h5>
-                        <strong>Joe Schmoe &lt;joe.schmoe@email.com&gt;</strong><br>
-                        1/12/22 10:10am
-                    </h5>
-                </div>
-
-                <h5><br>To: Julie Mooly Cc: Francis Lantis</h5>
-                <p><br>hello,</p>
-                <p><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, iure. Autem nam accusamus
-                    mollitia nobis, ullam minus ex corrupti maxime odio veniam delectus unde recusandae, minima labore
-                    nulla sequi iste libero fugit voluptates, assumenda impedit quae eligendi animi sint? Delectus
-                    tempora cum, consequatur reprehenderit velit non aut veritatis temporibus natus?</p>
-
             </div>
-           
+
             <nav data-role="navbar">
 
                 <form action="">
