--- a/pages/question3.html
+++ b/pages/question3.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email1.css">
+    <link rel="stylesheet" href="../css/email3.css">
 
     <title>Phishing Quiz</title>
 </head>
@@ -26,37 +26,44 @@
         <main>
 
             <div class="em-template">
-                <div class="em-nav">
-                    <ul>
-                        <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
-                        <li><a href="/replyall">Reply All</a></li>
-                        <li><a href="/forward">Forward</a></li>
-                        <li><a href="/delete">Delete</a></li>
-                        <!-- <li><a href="/setflag">Set Flag</a></li> -->
-                    </ul>
-                </div>
 
-                <h4>Re: Is this phishing?</h4>
+                <p><br>
+                    <span style="color: rgb(176, 176, 176); font-weight: bold;">From:</span> <strong>Napoleon
+                        Tanner</strong> &lt;ntanner698@gmail.com&gt;<br>
+                </p><br>
+                <hr>
 
-                <div class="em-from-div">
-                    <span class="em-dot">
-                        <p>JS</p>
-                    </span>
-                    <h5>
-                        <strong>Joe Schmoe &lt;joe.schmoe@email.com&gt;</strong><br>
-                        1/12/22 10:10am
-                    </h5>
-                </div>
+                <p><br>
+                    <span style="color: rgb(176, 176, 176); font-weight: bold;">To: </span>avgantivirus@yopmail.com
+                </p><br>
+                <hr>
+                <p><br>
+                    <span style="font-size: small;">Norton</span> Antivirus Computer Protection<br>
+                    Date : 08 February 2022<br><br>
 
-                <h5><br>To: Julie Mooly Cc: Francis Lantis</h5>
-                <p><br>hello,</p>
-                <p><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, iure. Autem nam accusamus
-                    mollitia nobis, ullam minus ex corrupti maxime odio veniam delectus unde recusandae, minima labore
-                    nulla sequi iste libero fugit voluptates, assumenda impedit quae eligendi animi sint? Delectus
-                    tempora cum, consequatur reprehenderit velit non aut veritatis temporibus natus?</p>
+                    Order No : GFHD785<br>
+                    Dear Customer,<br><br>
+
+                    We'd like to take this opportunity to thank you for your support over the past 36 months.<br><br>
+                    Your Credit card will be charged USD $ 699.99 on 08 February 2022 for another year of Protection. If
+                    you don't want our services please call on this number +1 <span
+                        style="border-bottom: 2px dotted;">(616) 678-3054</span>
+                    This will allow you access to take full advantage of all your new account benefits. <br><br>
+                    The following are the details of your Recurring Billing.<br><br>
+                    Charge Frequency : Three Years<br>
+                    End Date: 08 February 2022<br>
+                    Amount: $ 699.99<br>
+                    In case you don't want to continue with us then make sure you call us on +1 <span
+                        style="border-bottom: 2px dotted;">(616) 678-3054</span> before 08 February 2022 to avoid any
+                    recurring payment. We hope that you'll take this time to renew your membership and remain a part of
+                    our community.<br><br>
+                    Kindly Regards<br><br>
+                    <span style="font-size: small;">Norton Antivirus </span>
+                </p>
+                <br>
 
             </div>
-           
+
             <nav data-role="navbar">
 
                 <form action="">
