added em 4/5/6/7 and updated q4/5/6/7

--- a/pages/question4.html
+++ b/pages/question4.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email1.css">
+    <link rel="stylesheet" href="../css/email4.css">
 
     <title>Phishing Quiz</title>
 </head>
@@ -26,37 +26,92 @@
         <main>
 
             <div class="em-template">
-                <div class="em-nav">
-                    <ul>
-                        <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
-                        <li><a href="/replyall">Reply All</a></li>
-                        <li><a href="/forward">Forward</a></li>
-                        <li><a href="/delete">Delete</a></li>
-                        <!-- <li><a href="/setflag">Set Flag</a></li> -->
-                    </ul>
-                </div>
 
-                <h4>Re: Is this phishing?</h4>
+                <h2 style="padding: 2em 0 0;">You made a purchase with your TJX Rewards® Platinum Mastercard®.</h2>
 
                 <div class="em-from-div">
                     <span class="em-dot">
-                        <p>JS</p>
+                        <p>SM</p>
                     </span>
-                    <h5>
-                        <strong>Joe Schmoe &lt;joe.schmoe@email.com&gt;</strong><br>
-                        1/12/22 10:10am
-                    </h5>
+                    <h4>
+                        <strong>Synchrony for your TJX Rewards® Platinum Mastercard®
+                            &lt;customer.service@mail.synchronybank.com&gt;</strong><br>
+                        1/11/2022 4:48 PM
+                    </h4>
                 </div>
 
-                <h5><br>To: Julie Mooly Cc: Francis Lantis</h5>
-                <p><br>hello,</p>
-                <p><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, iure. Autem nam accusamus
-                    mollitia nobis, ullam minus ex corrupti maxime odio veniam delectus unde recusandae, minima labore
-                    nulla sequi iste libero fugit voluptates, assumenda impedit quae eligendi animi sint? Delectus
-                    tempora cum, consequatur reprehenderit velit non aut veritatis temporibus natus?</p>
+                <h4><br>To: annab23@hotmail.com</h4><br>
+                <br>
+                <div class="body">
+                    <p style="float: right; margin: 10px;">Account ending in: 9528 | <span class="tooltip"
+                            style="text-decoration: underline;">Log in
+                            <span class="tooltiptext">https://tjx.syf.com/login/?lang=en<br> Click or tap to follow
+                                link</span>
+                        </span></p>
+                    <div class="tjx-synchrony">
+                        <img src="../images/tjmx-logos.png" alt="tjx logos">
+                        <img src="../images/synchrony-logo.png" alt="synchrony logo">
+                    </div>
+                    <h1>
+                        <span>You made a purchase of $31.11 from WALMART.</span>
+                    </h1>
+                    <br>
 
+                    <p>
+                        Hi Anna,<br><br>
+
+                        Thanks for making a purchase on your TJX Rewards® Platinum Mastercard®. Here are your purchase
+                        details:
+
+                    </p><br><br>
+
+                    <div class="googlemap">
+                        <div class="tooltip">
+                            <img src="../images/googlemap-walmart.png" alt="google map">
+                            <span
+                                class="tooltiptext">https://www.google.com/maps/search/?api=1&query=36.365723,-94.217579<br>
+                                Click or tap to follow link</span>
+                        </div>
+                    </div>
+
+                    <h2 style="text-align:center;">Update your alert preferences anytime.</h2><br>
+                    <div class="tooltip tooltip-button">Log In Now
+                        <span class="tooltiptext">https://tjx.syf.com/login/?lang=en<br> Click or tap to follow
+                            link</span>
+                    </div><br><br>
+
+                    <p>The TJX Rewards® Platinum Mastercard® is issued by Synchrony Bank pursuant to a license by
+                        Mastercard
+                        International Incorporated. Mastercard is a registered trademark, and the circles design is a
+                        trademark
+                        of Mastercard International Incorporated.<br><br>
+                        Head off identity theft before it happens. For more information about identity theft, please
+                        visit the
+                        Federal Trade Commission′ s (FTC) consumer
+                        <span class="tooltip" style="color: blue; text-decoration: underline;">website.
+                            <span class="tooltiptext">https://www.identitytheft.gov/<br> Click or tap to follow link
+                            </span>
+                        </span>
+                        </><br><br>
+                        This is an unmonitored email box. Please do not reply to this email.<br><br>
+                        ABOUT THIS EMAIL MESSAGE: This email was sent by Synchrony to provide important account
+                        servicing
+                        information regarding your TJX Rewards® Platinum Mastercard® account. You may receive account
+                        servicing
+                        emails even if you have requested not to receive marketing offers by email for your TJX Rewards®
+                        Platinum Mastercard® account. <br><br>
+                        Credit is extended by Synchrony Bank, which is located at <span
+                            style="border-bottom: 2px dotted;">170
+                            Election Road, Suite 125, Draper, UT 84020-6425,</span> USA.
+                        <span class="tooltip" style="color: blue; text-decoration: underline;">www.synchrony.com
+                            <span class="tooltiptext">https://www.synchrony.com/<br> Click or tap to follow link
+                            </span><br><br>
+
+                    </p><br>
+
+                </div>
             </div>
-           
+
             <nav data-role="navbar">
 
                 <form action="">
