--- a/pages/question5.html
+++ b/pages/question5.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email1.css">
+    <link rel="stylesheet" href="../css/email5.css">
 
     <title>Phishing Quiz</title>
 </head>
@@ -26,37 +26,65 @@
         <main>
 
             <div class="em-template">
-                <div class="em-nav">
-                    <ul>
-                        <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
-                        <li><a href="/replyall">Reply All</a></li>
-                        <li><a href="/forward">Forward</a></li>
-                        <li><a href="/delete">Delete</a></li>
-                        <!-- <li><a href="/setflag">Set Flag</a></li> -->
-                    </ul>
-                </div>
 
-                <h4>Re: Is this phishing?</h4>
+                <p><br>
+                    <span style="color: rgb(176, 176, 176); font-weight: bold;">From:</span> <strong>Amber
+                        Arnold</strong> &lt;amber@goodgig.work&gt;<br>
+                </p><br>
+                <hr>
 
-                <div class="em-from-div">
-                    <span class="em-dot">
-                        <p>JS</p>
+                <p><br>
+                    <span style="color: rgb(176, 176, 176); font-weight: bold;">To: </span>xavierplume@gmail.com
+                </p><br>
+                <hr>
+                <p><br>
+
+                    <span style="color: rgb(176, 176, 176); font-weight: bold;">Subject: </span><strong>Senior Product
+                        Designer opportunity at high-growth startup</strong>
+                </p><br>
+                <hr>
+                <p><br>
+
+                    Hi Xave, <br><br>
+
+                    Friendly follow-up in case my email got lost in the mix. Would love to connect with you about the
+                    <span class="tooltip" style="color: blue; text-decoration: underline;">Senior Product Designer
+                        <span class="tooltiptext">https://znsrc.com/c/adqqzfgmqt<br> Click or tap to follow link
+                        </span>
                     </span>
-                    <h5>
-                        <strong>Joe Schmoe &lt;joe.schmoe@email.com&gt;</strong><br>
-                        1/12/22 10:10am
-                    </h5>
-                </div>
+                    at
+                    <span class="tooltip" style="color: blue; text-decoration: underline;">Polygence
+                        <span class="tooltiptext">https://znsrc.com/c/mloexxaehp<br> Click or tap to follow link
+                        </span>
+                    </span>.
+                    <br><br>
 
-                <h5><br>To: Julie Mooly Cc: Francis Lantis</h5>
-                <p><br>hello,</p>
-                <p><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, iure. Autem nam accusamus
-                    mollitia nobis, ullam minus ex corrupti maxime odio veniam delectus unde recusandae, minima labore
-                    nulla sequi iste libero fugit voluptates, assumenda impedit quae eligendi animi sint? Delectus
-                    tempora cum, consequatur reprehenderit velit non aut veritatis temporibus natus?</p>
+                    This is a seriously special opportunity to join a mission-driven startup ( <span class="tooltip"
+                        style="color: blue; text-decoration: underline;">with excellent reviews<span
+                            class="tooltiptext">https://znsrc.com/c/gcxengnbav<br> Click or tap to follow link
+                        </span>
+                    </span>) before hitting the growth stage.<br><br>
+
+                    If you're interested, find time with me here:
+                    <span class="tooltip"
+                        style="color: blue; text-decoration: underline;">https://calendly.com/recr-amber/pg-ux
+                        <span class="tooltiptext">https://znsrc.com/c/dnrevnchwn<br> Click or tap to follow link
+                        </span>
+                    </span> <br><br>
+
+                    With thanks,<br>
+                    Amber Arnold<br>
+                    Fractional Recruiter for Polygence | <span class="tooltip"
+                        style="color: blue; text-decoration: underline;">Linkedin
+                        <span class="tooltiptext">https://znsrc.com/c/orluiyhvlp<br> Click or tap to follow link
+                        </span>
+                    </span><br>
+
+                </p>
+                <br>
 
             </div>
-           
+
             <nav data-role="navbar">
 
                 <form action="">
