--- a/pages/question6.html
+++ b/pages/question6.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email1.css">
+    <link rel="stylesheet" href="../css/email6.css">
 
     <title>Phishing Quiz</title>
 </head>
@@ -26,37 +26,59 @@
         <main>
 
             <div class="em-template">
-                <div class="em-nav">
-                    <ul>
-                        <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
-                        <li><a href="/replyall">Reply All</a></li>
-                        <li><a href="/forward">Forward</a></li>
-                        <li><a href="/delete">Delete</a></li>
-                        <!-- <li><a href="/setflag">Set Flag</a></li> -->
-                    </ul>
-                </div>
-
-                <h4>Re: Is this phishing?</h4>
 
                 <div class="em-from-div">
                     <span class="em-dot">
-                        <p>JS</p>
+                        <p>D</p>
                     </span>
-                    <h5>
-                        <strong>Joe Schmoe &lt;joe.schmoe@email.com&gt;</strong><br>
-                        1/12/22 10:10am
-                    </h5>
+                    <h4>
+                        <strong>Dropbox</strong>
+                        <span style="color: gray;">&lt;no-reply@dropboxmail.com&gt;<br>
+                            1/11/2022 4:48 PM</span>
+                    </h4>
                 </div>
+                <div class="body">
+                    <div class="dropbox">
+                        <img src="../images/dropbox-logo.png" alt="dropbox logo">
+                    </div>
+                    <p>
+                        Hello,
+                    </p>
+                    <br>
 
-                <h5><br>To: Julie Mooly Cc: Francis Lantis</h5>
-                <p><br>hello,</p>
-                <p><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, iure. Autem nam accusamus
-                    mollitia nobis, ullam minus ex corrupti maxime odio veniam delectus unde recusandae, minima labore
-                    nulla sequi iste libero fugit voluptates, assumenda impedit quae eligendi animi sint? Delectus
-                    tempora cum, consequatur reprehenderit velit non aut veritatis temporibus natus?</p>
+                    <p> Your Dropbox is full and is no longer syncing files. New files added to your Dropbox folder
+                        won't be accessible on your other devices and won't be backed up online.
+                    </p><br><br>
+                    <p> Upgrade your Dropbox today and get 1 TB (1,000 GB) of space and powerful sharing features.
+                    </p><br><br>
 
+                    <div class="tooltip tooltip-button">Upgrade your Dropbox
+                        <span class="tooltiptext">https://www.dropbox.com/buy</span>
+                    </div><br><br>
+
+                    <p>
+                        For other ways to get more space, visit our
+                        <span class="tooltip" style="color: blue;">Get More Space
+                            <span class="tooltiptext">https://www.dropbox.com/help/space/get-more-space
+                            </span>
+                        </span>page.<br><br>
+                    </p>
+                    <p>
+                        Happy Dropboxing!<br><br>
+                    </p>
+                    <p>
+                        - The Dropbox Team<br><br>
+                    </p>
+                    <p>
+                        P.S. If you need the biggest plan we've got, check out
+                        <span class="tooltip" style="color: blue;">Dropbox for Business.
+                            <span class="tooltiptext">https://www.dropbox.com/business</span>
+                        </span>
+                    </p><br><br>
+
+                </div>
             </div>
-           
+
             <nav data-role="navbar">
 
                 <form action="">
