--- a/pages/question7.html
+++ b/pages/question7.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email1.css">
+    <link rel="stylesheet" href="../css/email7.css">
 
     <title>Phishing Quiz</title>
 </head>
@@ -26,37 +26,45 @@
         <main>
 
             <div class="em-template">
-                <div class="em-nav">
-                    <ul>
-                        <li class="ui-icon-arrow-u-r ui-btn-icon-left"><a href="/reply">Reply</a></li>
-                        <li><a href="/replyall">Reply All</a></li>
-                        <li><a href="/forward">Forward</a></li>
-                        <li><a href="/delete">Delete</a></li>
-                        <!-- <li><a href="/setflag">Set Flag</a></li> -->
-                    </ul>
-                </div>
-
-                <h4>Re: Is this phishing?</h4>
-
                 <div class="em-from-div">
                     <span class="em-dot">
-                        <p>JS</p>
+                        <p>GH</p>
                     </span>
-                    <h5>
-                        <strong>Joe Schmoe &lt;joe.schmoe@email.com&gt;</strong><br>
-                        1/12/22 10:10am
-                    </h5>
+                    <h4>
+                        <strong>Google Hangouts &lt;no-reply@google.hangouts.com&gt;</strong><br>
+                        2/14/2022 12:06 PM
+                    </h4>
                 </div>
 
-                <h5><br>To: Julie Mooly Cc: Francis Lantis</h5>
-                <p><br>hello,</p>
-                <p><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, iure. Autem nam accusamus
-                    mollitia nobis, ullam minus ex corrupti maxime odio veniam delectus unde recusandae, minima labore
-                    nulla sequi iste libero fugit voluptates, assumenda impedit quae eligendi animi sint? Delectus
-                    tempora cum, consequatur reprehenderit velit non aut veritatis temporibus natus?</p>
+                <h4><br>To: chris.kissler@gmail.com</h4><br>
 
+                <div class="hangouts">
+                    <img src="../images/google-hangouts3.png" alt="google hangouts banner">
+                </div>
+                <div class="conversation">
+                    <div class="person-icon">
+                        <img src="../images/person-icon.png" alt="google hangouts banner">
+                    </div>
+                    <br><br>
+                    <p>Roberta Cavallo added you to a group conversation.<br><br><span style="color: gray;">with 1
+                            other</span></p><br><br>
+                    <div class="tooltip tooltip-button">View Conversation
+                        <span class="tooltiptext">https://google.hangouts.com/group-convo/hgroi33/</span>
+                    </div><br><br><br>
+                </div>
+                <br>
+                <p style="font-size: small; color: gray;">
+                    This notification was sent to <span style="color: blue;">chris.kissler@gmail.com</span>.
+                    <span class="tooltip" style="color: blue;">Unsubscribe
+                        <span class="tooltiptext">https://google.hangouts.com/unsubscribe/
+                        </span>
+                    </span> from these emails.<br>
+                    To stop receiving Google Hangouts notifications from someone, open their Google profile and click
+                    Mute.<br>
+                    Google LLC, 1600 Amphitheatre Pkwy, Mountain View, CA 94043 USA<br><br>
+                </p>
             </div>
-           
+
             <nav data-role="navbar">
 
                 <form action="">
