--- a/pages/results.html
+++ b/pages/results.html
@@ -22,7 +22,7 @@
 
         <!-- Home Page Body Start -->
         <main>
-            <form action="mailer.php" class="contact_form" method="post" name="form"></form>
+            <form action="../php/mailer.php" class="contact_form" method="post" name="form"></form>
             <p value="emplinq" id="userResults"></p>
             <input type="submit" id="send" value="Submit Results">
 
