updates to email/questions 1/2/3

--- a/email_templates/email1.html
+++ b/email_templates/email1.html
@@ -8,8 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ghostwriting</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/email1.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email1.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
                 <p>BS</p>
             </span>
             <h4>
-                <strong>Book Writing Service &lt;sales@thewritingcrib.com&gt;</strong><br>
+                <strong>Book Writing Service</strong> &lt;sales@thewritingcrib.com&gt;<br>
                 2/14/2022 12:06 PM
             </h4>
         </div>
@@ -60,8 +61,8 @@
             <span class="tooltiptext">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/ <br> Click or tap to follow link
             </span>
         </span>.
-        </p><br>
-    </div>
+        </p>
+    </div><br>
     </div>
 
 </body>
