--- a/email_templates/email2.html
+++ b/email_templates/email2.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>paypal</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/email-base.css">
     <link rel="stylesheet" href="css/email2.css">
 </head>
 
@@ -22,7 +23,7 @@
                 </span>
 </span> <br>
             Sent: Monday, July 5, 2021 12:35 PM<br>
-            To: jschmoe@yahoo.com
+            To: jschmoe@yahoo.com<br>
             Subject: [Limited Account] misinformation on the account, 7/5/2021 7:34:57 PM #198-777-84011<br>
             Importance: High
         </h4><br>
