--- a/email_templates/email3.html
+++ b/email_templates/email3.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>norton</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/email-base.css">
     <link rel="stylesheet" href="css/email3.css">
 </head>
 
@@ -18,15 +19,15 @@
 
             <p><br>
                 <span style="color: rgb(176, 176, 176); font-weight: bold;">From:</span> <strong>Napoleon Tanner</strong> &lt;ntanner698@gmail.com&gt;<br>
-            </p><br>
+            </p>
             <hr>
 
-        <p><br>
+        <p>
             <span style="color: rgb(176, 176, 176); font-weight: bold;">To:  </span>avgantivirus@yopmail.com
-        </p><br>
+        </p>
         <hr>
         <p><br>
-            <span style="font-size: small;">Norton</span>  Antivirus Computer Protection<br>
+            <span style="font-size: large;">Norton</span>  Antivirus Computer Protection<br>
             Date : 08 February 2022<br><br>
 
             Order No : GFHD785<br>
@@ -41,7 +42,7 @@
             Amount: $ 699.99<br>
             In case you don't want to continue with us then make sure you call us on +1 <span style="border-bottom: 2px dotted;">(616) 678-3054</span> before 08 February 2022 to avoid any recurring payment. We hope that you'll take this time to renew your membership and remain a part of our community.<br><br>
             Kindly Regards<br><br>
-            <span style="font-size: small;">Norton  Antivirus </span>
+            <span style="font-size: large;">Norton  Antivirus </span>
             </p>
         <br>
 
