updates to email/questions 4/5/6/7

--- a/email_templates/email4.html
+++ b/email_templates/email4.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>synchrony bank</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/email-base.css">
     <link rel="stylesheet" href="css/email4.css">
 </head>
 
@@ -23,8 +24,8 @@
                 <p>SM</p>
             </span>
             <h4>
-                <strong>Synchrony for your TJX Rewards® Platinum Mastercard®
-                    &lt;customer.service@mail.synchronybank.com&gt;</strong><br>
+                <strong>Synchrony for your TJX Rewards® Platinum Mastercard®</strong>
+                    &lt;customer.service@mail.synchronybank.com&gt;<br>
                 1/11/2022 4:48 PM
             </h4>
         </div>
