--- a/email_templates/email5.html
+++ b/email_templates/email5.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recruiter</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/email-base.css">
     <link rel="stylesheet" href="css/email5.css">
 </head>
 
@@ -17,20 +18,20 @@
     <div class="em-template">
 
             <p><br>
-                <span style="color: rgb(176, 176, 176); font-weight: bold;">From:</span> <strong>Amber Arnold</strong> &lt;amber@goodgig.work&gt;<br>
-            </p><br>
+                <span style="color: rgb(176, 176, 176); font-weight: bold;">From:</span> <strong>Amber Arnold</strong> &lt;amber@polygence.com&gt;
+            </p>
             <hr>
 
-        <p><br>
+        <p>
             <span style="color: rgb(176, 176, 176); font-weight: bold;">To:  </span>xavierplume@gmail.com
-        </p><br>
+        </p>
         <hr>
-        <p><br>
+        <p>
 
                 <span style="color: rgb(176, 176, 176); font-weight: bold;">Subject:  </span><strong>Senior Product Designer opportunity at high-growth startup</strong>
-            </p><br>
+            </p>
             <hr>
-            <p><br>
+            <p>
     
             Hi Xave, <br><br>
 
@@ -58,7 +59,7 @@ If you're interested, find time with me here:
 With thanks,<br>
 Amber Arnold<br>
 Fractional Recruiter for Polygence | <span class="tooltip" style="color: blue; text-decoration: underline;">Linkedin
-    <span class="tooltiptext">https://znsrc.com/c/orluiyhvlp<br> Click or tap to follow link
+    <span class="tooltiptext">https://linkedln.com.znsrc.com/c/orluiyhvlp<br> Click or tap to follow link
     </span>
 </span><br>
 
