--- a/email_templates/email6.html
+++ b/email_templates/email6.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dropbox</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/email-base.css">
     <link rel="stylesheet" href="css/email6.css">
 </head>
 
@@ -26,9 +27,10 @@
                 1/11/2022 4:48 PM</span>
             </h4>
         </div>
+        <br>
         <div class="body">
             <div class="dropbox">
-                <img src="../images/dropbox-logo.png" alt="dropbox logo">
+                <img src="images/dropbox-logo.png" alt="dropbox logo">
             </div>
             <p>
                 Hello,
