--- a/email_templates/email7.html
+++ b/email_templates/email7.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>google hangouts</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/email-base.css">
     <link rel="stylesheet" href="css/email7.css">
 </head>
 
@@ -19,21 +20,22 @@
             <p>GH</p>
         </span>
         <h4>
-            <strong>Google Hangouts &lt;no-reply@google.hangouts.com&gt;</strong><br>
-            2/14/2022 12:06 PM
+            <strong>Google Hangouts</strong> <span style="color: gray;">&lt;no-reply@google.hangouts.com&gt;<br>
+            2/14/2022 12:06 PM</span>
         </h4>
     </div>
 
-    <h4><br>To: chris.kissler@gmail.com</h4><br>
+    <!-- <h4><br>To: chris.kissler@gmail.com</h4> -->
+    <br>
 
     <div class="hangouts">
-        <img src="../images/google-hangouts3.png" alt="google hangouts banner">
+        <img src="images/google-hangouts3.png" alt="google hangouts banner">
     </div>
     <div class="conversation">
     <div class="person-icon">
-        <img src="../images/person icon.png" alt="google hangouts banner">
+        <img src="images/person icon.png" alt="google hangouts banner">
     </div>
-    <br><br><p>Roberta Cavallo added you to a group conversation.<br><br><span style="color: gray;">with 1 other</span></p><br><br>
+    <br><br><p style="margin-left: 0;">Roberta Cavallo added you to a group conversation.<br><br><span style="color: gray;">with 1 other</span></p><br><br>
     <div class="tooltip tooltip-button">View Conversation
         <span class="tooltiptext">https://google.hangouts.com/group-convo/hgroi33/</span>
     </div><br><br><br>
