Updated Results Page

--- a/pages/results.html
+++ b/pages/results.html
@@ -29,7 +29,8 @@
             </form>
 
             <form action="/php/index.php" method="post">
-                <!-- <p value="emplinq" name="name" id="userResults"></p> -->
+                <p value="emplinq" name="name" id="userResults"></p>
+                <p value="emailAddr" name="emailAddr" id="userEmail"></p>
                You scored <input id="userResults" type="input" name="name">%
                 <!-- Name: <input type="text" name="name"><br> -->
                 <!-- E-mail: <input type="text" name="email"><br>
