--- a/pages/results.html
+++ b/pages/results.html
@@ -28,7 +28,7 @@
 
             </form> -->
 
-            <form action="/php/mailer.php" method="post">
+            <form action="/php/sendResults.php" method="post">
                 
                 <p value="uname" name="uName" id="uName"></p>
                 <p value="emailAddr" name="emailAddr" id="uEmail"></p>
