--- a/pages/results.html
+++ b/pages/results.html
@@ -32,7 +32,7 @@
                 
                 <p value="uname" name="uName" id="uName"></p>
                 <p value="emailAddr" name="emailAddr" id="uEmail"></p>
-                <p value="results" name="results" id="uResults"></p>
+                <p value="results" name="results" >You scored <span  id="uResults"></span>%</p>
 
                 <input type="hidden" name="userName" id="userName">
                 <input type="hidden" name="userEmailAddr" id="userEmailAddr">
